backend-deployment-staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment-backend-staging
  namespace: backend-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-staging
    spec:
      containers:
        - name: backend-staging
          image: vanillavladimir/backend-staging:1
          ports:
            - containerPort: 4000
              name: nodejs-port
  selector:
    matchLabels:
      app: backend-staging
