front-end-deployment-staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: client-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: client-staging
    spec:
      containers:
        - name: client
          image: vanillavladimir/client-staging:7
          ports:
            - containerPort: 3000
              name: http-port
  selector:
    matchLabels:
      app: client-staging
