backend-service-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service-backend-prod
  namespace: backend-prod
spec:
  ports:
    - port: 4000
      protocol: TCP
  selector:
    app: backend-prod
#  template:
#    metadata:
#      labels:
#        name: server-service
#  type: LoadBalancer
