backend-service-staging.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service-backend-staging
  namespace: backend-staging
spec:
  ports:
    - port: 4000
      protocol: TCP
  selector:
    app: backend-staging
#  template:
#    metadata:
#      labels:
#        name: server-service
#  type: LoadBalancer
