front-end-service-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service-prod
  namespace: client-prod
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: client-prod
#  type: LoadBalancer
