front-end-service-staging.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service-staging
  namespace: client-staging
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: client-staging
#  type: LoadBalancer
