backend-ingress-staging.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress-backend-staging
  namespace: backend-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "backend-staging"
spec:
  rules:
    - host: backend.staging.vladgerald.tech
      http:
        paths:
          #- path: /belajar
          - backend:
              serviceName: server-service-backend-staging
              servicePort: 4000
  tls:
    - hosts:
        - backend.staging.vladgerald.tech
      secretName: backend-prod-tls
