front-end-ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress-prod
  namespace: client-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "client-prod"
spec:
  rules:
    - host: client.prod.vladgerald.tech
      http:
        paths:
          #- path: /belajar
          - backend:
              serviceName: client-service-prod
              servicePort: 80
  tls:
    - hosts:
        - client.prod.vladgerald.tech
      secretName: client-prod-tls
